test/source/errors/lexer-error.hc
// This test contains an invalid character,
// which should throw an error in the lexer.

  ~
